--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -5,7 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: lightgrey;
 }
+
+.RecentMatches{
+  padding-left: 100px;
+ 
+
+}
+
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
