--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -1,3 +1,9 @@
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,9 +15,11 @@ body {
 }
 
 .RecentMatches{
-  padding-left: 100px;
- 
+  padding: 60px;
+}
 
+.TeamList{
+  padding: 60px;
 }
 
 
