--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -16,10 +16,34 @@ body {
 
 .RecentMatches{
   padding: 60px;
+  
+ 
+  
 }
 
 .TeamList{
   padding: 60px;
+}
+
+@layer components{
+  .navbar-icon{
+    @apply relative flex items-center justify-center
+     h-12 w-12 mb-2 mt-2 mx-auto shadow-lg
+     bg-slate-600 text-slate-300  hover:bg-slate-800
+     hover:text-slate-400
+     rounded-3xl hover:rounded-xl 
+     transition-all duration-300 ease-linear ;
+  }
+
+  .navbar-tooltip{
+    @apply absolute w-auto p-2 m-2 min-w-max left-14
+    rounded-md shadow-md
+    text-slate-900 bg-slate-600 
+    text-xs font-bold
+    transition-all duration-100 scale-0 origin-left;  
+  }
+
+
 }
 
 
