--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -14,6 +14,10 @@ body {
   background-color: lightgrey;
 }
 
+.MatchDetail{
+  font-weight: bold;
+}
+
 .recentmatches{
   padding: 80px;
   float: left;
@@ -25,10 +29,15 @@ body {
 }
 
 .TeamList{
-  padding: 80px;
-  
+ 
+  padding:80px;
   float: right;
  
+}
+
+.MatchPage{
+  padding: 80px;
+  float: left;
 }
 
 @layer components{
