--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -14,6 +14,11 @@ body {
   background-color: lightgrey;
 }
 
+.chart1s{
+  float: left;
+  padding-left: 350px;
+}
+
 .topbar{
   border-radius: 30px 30px;
   text-align:center;
@@ -25,7 +30,11 @@ body {
 .MatchDetail{
   font-weight: bold;
   
+  
 }
+
+
+
 .MatchSmall{
   margin-bottom: 2%;
   display: grid;
@@ -47,6 +56,12 @@ body {
   
 }
 
+.image{
+  height: 50px;
+  width: 60px;
+}
+
+
 .box1{
 
   color:white;
@@ -54,7 +69,9 @@ body {
   border-radius: 10px;
   padding: 20px;
   width: 150%;
-  
+  height : 200px;
+  text-align: center;
+  align-items: center;
 }
 .box{
   color:white;
@@ -101,8 +118,8 @@ body {
   border-radius: 12px;
   background-color: rgb(0 128 101);
   color: white;
-  padding:5px;
-  padding-left: 10px;
+  padding:20px;
+  
   padding-bottom: 50px;
 }
 
@@ -110,8 +127,8 @@ body {
   border-radius: 12px;
   background-color: rgb(255 0 101);
   color: white;
-  padding: 5px;
-  padding-left: 10px;
+  padding: 20px;
+  
   padding-bottom: 50px;  
 }
 
