--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -23,7 +23,7 @@ body {
   border-radius: 30px 30px;
   text-align:center;
   float:left;
-  padding: left 20px;;
+  padding-left: 20px;
   font-weight:900;
   }
 
@@ -33,7 +33,15 @@ body {
   
 }
 
+.team{
+  padding-top: 40px;
+}
 
+.my {
+  width: fit-content;
+  margin-left: 35%;
+  /* margin-right: 35%; */
+}
 
 .MatchSmall{
   margin-bottom: 2%;
@@ -50,15 +58,23 @@ body {
   margin-top: 2%;
   display: grid;
   padding-top: 30px;
-  padding-left: 60px;
+
   float: left;
-  margin-left: 5%;
+  margin-left: 65px;
   
 }
 
-.image{
-  height: 50px;
-  width: 60px;
+.image1{
+  float: left;
+  height: 75px;
+  width: 75px;
+  margin-bottom: 30%;
+}
+
+.image2{
+  float: right;
+  height:70px;
+  width: 70px;
 }
 
 
@@ -69,7 +85,8 @@ body {
   border-radius: 10px;
   padding: 20px;
   width: 150%;
-  height : 200px;
+  height : 150px;
+  font-weight: bold;
   text-align: center;
   align-items: center;
 }
@@ -98,7 +115,7 @@ body {
 }
 
 .MatchPage{
-  padding: 5px;
+  padding: 1px;
   padding-left: 70px;
   padding-top: 40px;
   float: left;
